# Detecting-Heavy-Objects

./: .coveragerc  .gitignore  .mypyrc  .pylintrc  Dockerfile  README.md  annotations_utils.py  azure-pipelines.yml  azure_storage_utils.py  bandit-relaxed.json  bandit-report.json  bandit.yaml  blur.Dockerfile  blur.py  blur_new.Dockerfile  bridges.geojson  code_style.sh  config.json  confusion_matrix.py  connect.py  connection.Dockerfile  dataset.py  delete_blobs.Dockerfile  delete_blobs.py  det2.yml  detect.Dockerfile  detection.Dockerfile  detectron2.yml  download.py  evaluation.py  experiment-utils.py  historical_container_locations.py  inference.py  inference_batch.py  instructions_blurring.md  metadata_to_postgresql.py  postprocessing.Dockerfile  postprocessing.dockerfile  postprocessing.py  predictions.py  (+27 more)
annotations-utils/: annotations-utils.py  geohash.py  geohash_city.py
blurring/: RawImagesCloudVPS.MD  crowded_locations.csv  crowded_pano_ids.csv  download_blurred.py  download_pano_from_cloudvps.py  find_crowded_panos.py  find_crowded_panos_pipeline.py  id_to_date.p
configs/: config_parser.py  container_detection.yaml  container_detection_inference.yaml  container_detection_train.yaml  hyperparameter-search.yaml  temp.yaml
containers/: download_batches.py  download_from_cloudvps.py  id_to_date.p
examples/: _example-clusters-stats.py  _example-subset-map.py  examples.md
hyperparams-grid-search/: run_search.py  utils.py
hyperparamsGridSearch/: run_search.py  utils.py
pipelines/: azure-pipelines.yml  pre-deployment-pipeline.yml
tests/: test_utils.py  (+9 more)
(+601 files in other folders)
