[tool.poetry]
name = "detecting-heavy-objects"
version = "0.1.0"
description = ""
authors = ["Laurens Samson <l.samson@amsterdam.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.8.0"
torchvision = "0.9.0"
pip = "^21.3.1"
install = "^1.3.5"
panorama = {git = "ssh://git@github.com/Computer-Vision-Team-Amsterdam/panorama.git", rev = "v0.2.0"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pylint = "^2.11.1"
mypy = "^0.910"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
