[tool.poetry]
name = "detecting-heavy-objects"
version = "0.1.0"
description = ""
authors = ["Laurens Samson <l.samson@amsterdam.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.8.0"
torchvision = "0.9.0"
opencv-python = "4.3.0.36"
poethepoet = "^0.10.0"
panorama = {git = "ssh://git@github.com/Computer-Vision-Team-Amsterdam/panorama.git", rev = "v0.2.0"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pylint = "^2.11.1"
mypy = "^0.910"
isort = "^5.9.3"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.8.0 torchvision==0.9.0 torchaudio==0.8.0 -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
